@@ -13,3 +13,27 @@ CunctatorPort=3749
 DelayChangePercent=5
 InputBusXfers=No
 OutputBusXfers=Yes
+
+[Input1]
+DelayControlSource=1000
+
+[Input2]
+DelayControlSource=1001
+
+[Input3]
+DelayControlSource=1002
+
+[Input4]
+DelayControlSource=1003
+
+[Input5]
+DelayControlSource=1004
+
+[Input6]
+DelayControlSource=1005
+
+[Input7]
+DelayControlSource=1006
+
+[Input8]
+DelayControlSource=1007
